:art: Fix skip to main content tap target too small

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -33,6 +33,7 @@
   margin-left: auto;
   margin-right: auto;
   padding: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .header__skipToMainContent:focus {
